fixing layout issues

--- a/packages/documentation/home/landing/styles/hero-content.module.scss
+++ b/packages/documentation/home/landing/styles/hero-content.module.scss
@@ -73,7 +73,6 @@
   display: flex;
   flex-direction: column;
   width: 95%;
-  // border: 1px solid yellow;
 
   @media (min-width: 1024px) {
     align-self: flex-end;
@@ -82,6 +81,7 @@
     grid-template-columns: 1fr 1fr;
     justify-items: center;
     width: 100%;
+    padding: 1rem;
   }
 }
 
